<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:elevation="4dp"
            app:title="@string/app_name"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
    <fragment
            android:id="@+id/listFragment"
            android:name="com.example.musicplayer.ui.MusicFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="?attr/actionBarSize"
            android:layout_marginBottom="?attr/actionBarSize"
            android:padding="16dp"
            tools:layout="@layout/music_fragment_item_list"/>
    <SeekBar
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="?attr/actionBarSize"
            android:id="@+id/seekBar" android:layout_weight="25"
            android:layout_gravity="bottom" android:paddingStart="20dip" android:paddingEnd="20dip"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_gravity="bottom"
            android:id="@+id/linearLayout" android:paddingEnd="10dp" android:paddingStart="10dp"
            android:paddingBottom="5dp">
        <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="match_parent" app:srcCompat="@android:drawable/ic_media_previous"
                android:id="@+id/previous" android:layout_weight="1" android:contentDescription="@string/previous"/>
        <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="match_parent" app:srcCompat="@android:drawable/ic_media_play"
                android:id="@+id/play" android:layout_weight="1" android:contentDescription="@string/pause"/>
        <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="match_parent" app:srcCompat="@android:drawable/ic_media_next"
                android:id="@+id/next" android:layout_weight="1" android:contentDescription="@string/next"/>
        <TextView
                android:text="@string/time_duration"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" android:layout_weight="1"
                android:gravity="center" android:id="@+id/current_duration" android:textSize="20sp"/>
        <TextView
                android:text="@string/line"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" android:id="@+id/textView3" android:layout_weight="0"
                android:gravity="center" android:textSize="20sp"/>
        <TextView
                android:text="@string/time_duration"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" android:layout_weight="1"
                android:gravity="center" android:id="@+id/duration" android:textSize="20sp"/>
    </LinearLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>